<resources>
    <string name="app_name">Animal Pregnancy Tracking</string>
    <string name="nav_edit">Edit/Remove</string>
    <string name="nav_critics">Incoming Births</string>
    <string name="nav_search">Search For a Record</string>
    <string name="nav_calculator">Date Calculator</string>
    <string name="activity_info_title">About</string>
    <string name="nav_gerceklesen_dgmlar">Happened Births</string>
    <string name="nav_period">Gestation Periods</string>
    <string name="nav_title">What do you want?</string>
    <string name="hint_tarih1">Date of insemination</string>
    <string name="hint_tarih2">Estimated birth date</string>
    <string name="hint_sperma_name">Sperma name(Optional)</string>
    <string name="hint_other_fields">Other Fields</string>
    <string name="kayit_yok_uyari2">There is no record yet, you have to create a record</string>
    <string name="tarih1">Date of insemination</string>
    <string name="tarih2">Date of birth</string>
    <string name="kupe_no">ID no</string>
    <string name="tur">Species</string>
    <string name="sperma_name">Sperma name</string>
    <string name="activity_duzenle_title">Edit/Remove Record</string>
    <string name="activity_kritikler_title">Incoming Birth(s)</string>
    <string name="activity_periods_title">Gestation Periods (Avg)</string>
    <string name="tur_0">Cow</string>
    <string name="tur_1">Sheep</string>
    <string name="tur_2">Goat</string>
    <string name="tur_3">Cat</string>
    <string name="tur_4">Dog</string>
    <string name="tur_5">Hamster</string>
    <string name="tur_7">Horse</string>
    <string name="tur_8">Donkey</string>
    <string name="tur_9">Camel</string>
    <string name="hint_isim">Name</string>
    <string name="hint_bul">Search</string>
    <string name="hint_kupe_no">ID no(Optional)</string>
    <string name="button_text_kaydet">Save</string>
    <string name="otomatik_hesaplandi_bildirim">The birth day has been calculated automatically.</string>
    <string name="bildirim_baslik">Incoming Birth Remainder</string>
    <string name="duzenle_button_text">Edit</string>
    <string name="kayit_yok_uyari">There is no pregnancy record yet; to create a record, click the button right below.</string>
    <string name="kayit_yok_uyari_kritikler">Don\'t/doesn\'t seem(s) any incoming birth in a month.</string>
    <string name="gerceklesen_dogum_yok_uyari">There\'s no happened birth yet.</string>
    <string name="activity_kayit_ekle_title">New Record</string>
    <string name="deger_yok_uyari">Please, fill the inputs to create a record.</string>
    <string name="bildirim_govde_text">There will be some births in a month.</string>
    <string name="date_input_helper_text">Please select a date</string>
    <string name="date_input_helper_text_2">Estimated birth date will be calculated automatically.</string>
    <string name="tarih_hesapla_title">Date Calculator</string>
    <string name="menu_kayit_bul">Search for a record</string>
    <string name="menu_dev_tools">Developer\'s Activity</string>
    <string name="button_multiple_creation">Create Record(s)</string>
    <string name="activity_ara_title">Search</string>
    <string name="radio_button_isim">Names</string>
    <string name="radio_button_kupe_no">ID numbers</string>
    <string name="radio_group_hint">Search in:</string>
    <string name="no_matches">No matches have been found</string>
    <string name="kupe_no_yok">—</string>
    <string-array name="animal_list">
        <item>Cow</item>
        <item>Sheep</item>
        <item>Goat</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Hamster</item>
        <item>Other</item>
        <item>Horse</item>
        <item>Donkey</item>
        <item>Camel</item>
        <item>Pig</item>
    </string-array>
    <string-array name="animal_list_pet">
        <item>Cat</item>
        <item>Dog</item>
        <item>Hamster</item>
        <item>Other</item>
    </string-array>
    <string-array name="animal_list_barn">
        <item>Cow</item>
        <item>Sheep</item>
        <item>Goat</item>
        <item>Other</item>
        <item>Horse</item>
        <item>Donkey</item>
        <item>Camel</item>
        <item>Pig</item>
    </string-array>
    <string-array name="all_species">
        <item>Cow</item>
        <item>Sheep</item>
        <item>Goat</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Hamster</item>
        <item>Horse</item>
        <item>Donkey</item>
        <item>Camel</item>
        <item>Pig</item>
    </string-array>
    <string name="spinner_description">Show that:</string>
    <string name="photo_picker_item_gallery">From gallery</string>
    <string name="photo_picker_item_camera">Open camera</string>
    <string name="photo_picker_item_remove">Remove photo</string>
    <string name="fab_pet_exp">"Pet  "</string>
    <string name="fab_barn_exp">Barn</string>
    <string name="txt_day">Day(s) to birth</string>
    <string name="txt_day_2">Day(s)</string>
    <string name="test_number" translatable="false">10</string>
    <string name="text_NA" translatable="false">—</string>
    <string name="APP_URL" translatable="false">https://play.google.com/store/apps/details?id=com.sariyazilim.hayvangebeliktakibi</string>
    <string name="edit_blocked_msg">This record has been marked as happened already, you cannot edit it anymore.</string>
    <string name="info_doguma_hazır_olma">Est. Next Dat. For Ins.</string>
    <string name="crop_text">Crop</string>
    <string name="info_kuruya_alma">Est. Dat. of Abort. Milking</string>
    <string name="show_other_details">Click to See Other Details</string>
    <string name="button_multiple_deletion">Remove All Records</string>
    <string name="button_clean_the_garbage">Clean The Garbage</string>
    <string name="activity_details_title">Details</string>
    <string name="mark_as_hppnd">Mark as happened</string>
    <string name="happened_birth">This birth has happened</string>
    <string name="title_dlg_isaretle">Ooops…</string>
    <string name="body_dlg_isaretle">This process cannot be undone and it is permanent. Also you cannot edit this anymore. Are you still sure about to mark it?</string>
    <string name="im_sure">I\'m Sure</string>
    <string name="nav_all_recs">All Records</string>
    <string name="cat_name">Name</string>
    <string name="cat_id">ID</string>
    <string name="cat_date1">Insemination Date</string>
    <string name="cat_date2">Birth Date</string>
    <string name="version">Version:</string>
    <string name="privacy_policy">Go to Privacy Policy</string>
    <string name="vote">Vote in Store</string>
    <string name="APP_POLICY" translatable="false">https://sametbozkurt0.blogspot.com/2019/09/samet-bozkurt-built-animal-pregnancy.html</string>
    <string name="app_info_subtitle">Developed by Samet Bozkurt</string>
    <string name="switch_show_happeneds">Show happened births</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_apply">Apply</string>
    <string name="orderBy">Order by:</string>
    <string name="cat_AtoZ">A to Z</string>
    <string name="cat_ZtoA">Z to A</string>
    <string name="credit_headline">And also…</string>
    <string name="credit_body">Thanks for the icons created by:</string>
    <string name="attrubtion1" translatable="false">&lt;a href=\"https://www.flaticon.com/authors/vitaly-gorbachev\">Vitaly Gorbachev&lt;/a></string>
    <string name="attrubtion2" translatable="false">&lt;a href=\"https://www.flaticon.com/authors/freepik\">Freepik&lt;/a></string>
    <string name="hint_dateOfBreeding">Date of birth</string>
    <string name="enYakinDogumlar">Nearest Birth(s)</string>
    <string name="tumGoster">Show All</string>
    <string name="sonOlusturulanlar">Latest Creation(s)</string>
    <string name="btn_resetOrderPreferenes">Reset</string>
    <string name="filter_title">Filter and Sort</string>
    <string name="nav_sum">Summary</string>
    <string name="cat_FirstCreations">First Creations</string>
    <string name="cat_LastCreations">Last Creations</string>
    <string name="button_alarm_hour">Set Alarm Hour</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_ayarlar">Settings</string>
    <string name="switch_notifications_on">Notifications for incoming birth</string>
    <string name="text_daily_not_hour">Daily notification hour:</string>
    <string name="button_text_change">Change</string>
    <string name="text_set">Set</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_notify_range">Notify me if there is a birth in … day(s):</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cardAppearance">Card Appearance</string>
    <string name="text_textSize">Text size of cards:</string>
    <string name="textsizeLarge">Large-18pt</string>
    <string name="textsizeMedium">Medium/Default-14pt</string>
    <string name="textsizeSmall">Small-12pt</string>
    <string name="title_others">Other Options</string>
    <string name="switch_cleaner_on">Auto cache cleaner</string>
    <string name="edit_periods">Edit Periods</string>
    <string name="edit_period_option">Recalculate also estimated birth dates of all records</string>
    <string name="editPeriodsNotifyText">Estimated automatic birth date calculations are based on these values. Therefore, changing these values will affect the date calculations to be made.</string>
    <string name="tur_10">Pig</string>
    <string name="ad_show_warning">Ad will be shown after 5 seconds...</string>
    <string name="birth_timeout_info">Looks like there are some pregnancies that are out of time.</string>
</resources>
