<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/margin_kategori_2"
    android:paddingBottom="@dimen/margin_kategori_2"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_title"
        android:textSize="24sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/spinner_description"
        android:layout_marginTop="@dimen/margin_kategori_2"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_kategori_2"
        android:layout_marginEnd="@dimen/margin_kategori_3">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group_filter"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_isim"
                android:textColor="@android:color/black"
                android:buttonTint="#1E88E5"
                android:text="@string/cat_name"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_kupe_no"
                android:text="@string/cat_id"
                android:textColor="@android:color/black"
                android:buttonTint="#1E88E5"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_date1"
                android:text="@string/cat_date1"
                android:textColor="@android:color/black"
                android:buttonTint="#1E88E5"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_date2"
                android:text="@string/cat_date2"
                android:textColor="@android:color/black"
                android:buttonTint="#1E88E5"/>

        </RadioGroup>

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/orderBy"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_kategori_2"
        android:layout_marginEnd="@dimen/margin_kategori_3">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/radio_group_order">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_first"
                android:textColor="@android:color/black"
                android:buttonTint="#1E88E5"
                android:text="@string/cat_FirstCreations"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_last"
                android:textColor="@android:color/black"
                android:buttonTint="#1E88E5"
                android:text="@string/cat_LastCreations"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_AtoZ"
                android:textColor="@android:color/black"
                android:buttonTint="#1E88E5"
                android:text="@string/cat_AtoZ"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_ZtoA"
                android:text="@string/cat_ZtoA"
                android:textColor="@android:color/black"
                android:buttonTint="#1E88E5"/>

        </RadioGroup>

    </HorizontalScrollView>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_show_happeneds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_kategori_3"
        android:layout_marginEnd="@dimen/margin_kategori_3"
        android:fontFamily="@font/varela_round"
        android:text="@string/switch_show_happeneds"
        android:textColor="#000" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_kategori_4"
        android:layout_marginEnd="@dimen/margin_kategori_4">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_apply"
            android:layout_gravity="end"
            android:text="@string/btn_apply"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:backgroundTint="#1E88E5"
            app:icon="@drawable/ic_tick"
            app:iconSize="22dp"
            app:iconTint="#fff"
            android:textColor="#fff"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reset"
            android:layout_gravity="start"
            android:text="@string/btn_resetOrderPreferenes"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:backgroundTint="#fff"
            app:icon="@drawable/ic_undo"
            app:iconSize="22dp"
            app:iconTint="#1E88E5"
            app:strokeColor="#1E88E5"
            app:strokeWidth="2dp"
            android:textColor="#1E88E5"/>

    </FrameLayout>

</LinearLayout>