<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:id="@+id/title_text"
        android:padding="@dimen/margin_kategori_4"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/text_textSize"
        android:textColor="#000"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group_textSize"
        android:layout_marginStart="@dimen/margin_kategori_3"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizeLarge"
            android:textColor="#000"
            android:textSize="15sp"
            android:buttonTint="#5E35B1"
            android:fontFamily="@font/open_sans"
            android:text="@string/textsizeLarge"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizeMedium"
            android:fontFamily="@font/open_sans"
            android:textSize="15sp"
            android:text="@string/textsizeMedium"
            android:textColor="#000"
            android:buttonTint="#5E35B1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizeSmall"
            android:fontFamily="@font/open_sans"
            android:text="@string/textsizeSmall"
            android:textSize="15sp"
            android:textColor="#000"
            android:buttonTint="#5E35B1"/>

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            style="@style/TextButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/text_set"
            android:textColor="#138EE9"
            app:rippleColor="#84BCE4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/TextButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/text_cancel"
            android:textColor="#138EE9"
            app:rippleColor="#84BCE4" />

    </FrameLayout>

</LinearLayout>