<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    app:strokeWidth="2dp"
    app:strokeColor="#37474f"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#f5f5f5"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_isim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@id/img_hayvan"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/margin_kategori_1"
            android:text="@string/hint_isim"
            android:textColor="@color/listViewTextColor"
            android:fontFamily="@font/comfortaa_bold"/>

        <TextView
            android:id="@+id/txt_tur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_isim"
            android:layout_marginStart="35dp"
            android:layout_marginTop="@dimen/margin_kategori_1"
            android:text="@string/tur"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@color/listViewTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_kupe_no"
            android:layout_below="@id/txt_tur"
            android:textColor="@color/listViewTextColor"
            android:text="@string/kupe_no"
            android:layout_marginTop="@dimen/margin_kategori_1"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/comfortaa_bold"/>

        <TextView
            android:id="@+id/txt_tarih1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_kupe_no"
            android:layout_marginStart="35dp"
            android:layout_marginTop="@dimen/margin_kategori_1"
            android:layout_marginEnd="@dimen/margin_kategori_1"
            android:drawingCacheQuality="low"
            android:text="@string/tarih1"
            android:textColor="@color/listViewTextColor"
            android:fontFamily="@font/comfortaa_bold"/>

        <TextView
            android:id="@+id/txt_tarih2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tarih1"
            android:layout_marginStart="35dp"
            android:layout_marginTop="@dimen/margin_kategori_1"
            android:layout_marginBottom="@dimen/margin_kategori_1"
            android:drawingCacheQuality="low"
            android:text="@string/tarih2"
            android:textColor="@color/listViewTextColor"
            android:fontFamily="@font/comfortaa_bold"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_hayvan"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_kategori_3"
            android:src="@mipmap/cat"
            android:elevation="2dp"
            app:civ_circle_background_color="#FFEB3B"
            app:civ_border_width="2dp"
            app:civ_border_color="#37474f"
            android:contentDescription="@null"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
